input text on all pages, created a black bar at the bottom, and other stylized code in css.

--- a/about.html
+++ b/about.html
@@ -18,5 +18,8 @@
             <a href="contact.html">Contact</a>
         </div>
     </nav>
+    <section id="section1"><h2 >This would be a title</h2>
+    <p>A big paragraph for about me would be here.</p></section>
 </body>
+ <footer><div id="blackBar"></div></footer>
 </html>
