--- a/contact.html
+++ b/contact.html
@@ -18,5 +18,10 @@
             <a class="active" href="#">Contact</a>
         </div>
     </nav>
+     <section id="section1">
+      <h2>This would be a title</h2>
+      <p>contact links and info.</p>
+    </section>
 </body>
+ <footer><div id="blackBar"></div></footer>
 </html>
