--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 </head>
 <body>
     <nav>
@@ -18,5 +19,13 @@
             <a href="contact.html">Contact</a>
         </div>
     </nav>
+    <main>
+        <img src="https://imgs.search.brave.com/o57wzJ-jZk2LAvTN8n8UVEkYaZIkN0iC6oYQxU3cfZ4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/d3dlLmNvbS9mL3N0/eWxlcy93d2VfbGFy/Z2UvcHVibGljL2Fs/bC8yMDE2LzA4L1Zh/Y2FudC0tOWI3YmIw/MWRlNjU3ZjhiMzY5/ZDE5NmRjMDM3YTM0/MTYucG5n" alt="Place holder photo">
+        <h2>Future Dev, Gamer</h2>
+        <p> 
+            This is where words go. 
+        </p>
+    </main>
+    <footer><div id="blackBar"></div></footer>
 </body>
 </html>
