--- a/portfolio.html
+++ b/portfolio.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-         <div id="logo">
-            <h1>Richard Power</h1>
-        </div>
-        <div id="links">
-            <a href="#">Home</a>
-            <a href="about.html">About</a>
-            <a class="active" href="#">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </div>
+      <div id="logo">
+        <h1>Richard Power</h1>
+      </div>
+      <div id="links">
+        <a href="#">Home</a>
+        <a href="about.html">About</a>
+        <a class="active" href="#">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </div>
     </nav>
-</body>
+    <section id="section1">
+      <h2>This would be a title</h2>
+      <p>portfolo would be here.</p>
+    </section>
+  </body>
+   <footer><div id="blackBar"></div></footer>
 </html>
