fixed homepage links in contact and portfolio, added the media code for mobile devices.

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <h1>Richard Power</h1>
       </div>
       <div id="links">
-        <a href="#">Home</a>
+        <a href="homepage.html">Home</a>
         <a href="about.html">About</a>
         <a class="active" href="#">Portfolio</a>
         <a href="contact.html">Contact</a>
