--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             <h1>Richard Power</h1>
         </div>
         <div id="links">
-            <a class="active" href="#">Home</a>
+            <a href="homepage.html">Home</a>
             <a href="about.html">About</a>
             <a href="portfolio.html">Portfolio</a>
             <a class="active" href="#">Contact</a>
