adjusted media, changes to all html pages.

--- a/about.html
+++ b/about.html
@@ -18,8 +18,9 @@
             <a href="contact.html">Contact</a>
         </div>
     </nav>
-    <section id="section1"><h2 >This would be a title</h2>
-    <p>A big paragraph for about me would be here.</p></section>
+    <section id="section1"><h2 >About Me</h2>
+    <p>I'm a future developer with a genuine passion for learning code and building new things. When I'm not immersed in development, you'll find me exploring diverse worlds as a gamer, enjoying everything from strategic challenges to immersive narratives.</p>
+    <img src="https://imgs.search.brave.com/62tbc0PsICK-fswgHWwJKusFUk1qcijEZ7Y-jPCZ-V8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4u/dmVjdG9yc3RvY2su/Y29tL2kvcHJldmll/dy0xeC8zNS82My9j/b25jZXB0LW9mLWdh/bWUtZGV2ZWxvcG1l/bnQtbWFsZS1jaGFy/YWN0ZXItdmVjdG9y/LTQ0OTUzNTYzLmpw/Zw" alt="game dev"></section>
 </body>
  <footer><div id="blackBar"></div></footer>
 </html>
