--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,9 @@
         </div>
     </nav>
      <section id="section1">
-      <h2>This would be a title</h2>
+      <h2>Contacts</h2>
       <p>contact links and info.</p>
+      <img src="https://imgs.search.brave.com/hXaO0UMoPTXa3IZVxIaknMQTgAygVRxOo3BvttsAHRY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvNjg1/NjE4OTgwL3Bob3Rv/L2NvbnRhY3RzLmpw/Zz9zPTYxMng2MTIm/dz0wJms9MjAmYz1Y/dE94a2hHbEZEeTNC/dFZWUl9HYVdTRXU3/Z0F2aDd3bTNMTnA5/bndKMVR3PQ" alt="contacts">
     </section>
 </body>
  <footer><div id="blackBar"></div></footer>
