--- a/homepage.html
+++ b/homepage.html
@@ -20,11 +20,10 @@
         </div>
     </nav>
     <main>
-        <img src="https://imgs.search.brave.com/o57wzJ-jZk2LAvTN8n8UVEkYaZIkN0iC6oYQxU3cfZ4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/d3dlLmNvbS9mL3N0/eWxlcy93d2VfbGFy/Z2UvcHVibGljL2Fs/bC8yMDE2LzA4L1Zh/Y2FudC0tOWI3YmIw/MWRlNjU3ZjhiMzY5/ZDE5NmRjMDM3YTM0/MTYucG5n" alt="Place holder photo">
         <h2>Future Dev, Gamer</h2>
-        <p> 
-            This is where words go. 
-        </p>
+        <p>I am currently learning to code with the hopes of becoming a dev. I am also a big gamer, and I enjoy all types of genres.</p>
+        <img src="https://imgs.search.brave.com/o57wzJ-jZk2LAvTN8n8UVEkYaZIkN0iC6oYQxU3cfZ4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/d3dlLmNvbS9mL3N0/eWxlcy93d2VfbGFy/Z2UvcHVibGljL2Fs/bC8yMDE2LzA4L1Zh/Y2FudC0tOWI3YmIw/MWRlNjU3ZjhiMzY5/ZDE5NmRjMDM3YTM0/MTYucG5n" alt="Place holder photo">
+       
     </main>
     <footer><div id="blackBar"></div></footer>
 </body>
