--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,9 @@
       </div>
     </nav>
     <section id="section1">
-      <h2>This would be a title</h2>
-      <p>portfolo would be here.</p>
+      <h2>Portfolio</h2>
+      <p>This is where I would list all the projects</p>
+      <img src="https://imgs.search.brave.com/3PxzVuFiPg4KTseGYEJSQq1z4sDl9es-X6bwlz2O1fg/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9taXIt/czMtY2RuLWNmLmJl/aGFuY2UubmV0L3By/b2plY3RzLzQwNC8x/N2UwNWQyMjcyMDc4/MjcuWTNKdmNDdzBN/VGN5TERNeU5qUXNP/REExTERBLnBuZw" alt="portfolio stock photo">
     </section>
   </body>
    <footer><div id="blackBar"></div></footer>
