added code for input buttons on the contacts page

--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Contacts</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-         <div id="logo">
-            <h1>Richard Power</h1>
-        </div>
-        <div id="links">
-            <a href="homepage.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a class="active" href="#">Contact</a>
-        </div>
+      <div id="logo">
+        <h1>Richard Power</h1>
+      </div>
+      <div id="links">
+        <a href="homepage.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a class="active" href="#">Contact</a>
+      </div>
     </nav>
-     <section id="section1">
+    <section id="section1">
       <h2>Contacts</h2>
-      <p>contact links and info.</p>
-      <img src="https://imgs.search.brave.com/hXaO0UMoPTXa3IZVxIaknMQTgAygVRxOo3BvttsAHRY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvNjg1/NjE4OTgwL3Bob3Rv/L2NvbnRhY3RzLmpw/Zz9zPTYxMng2MTIm/dz0wJms9MjAmYz1Y/dE94a2hHbEZEeTNC/dFZWUl9HYVdTRXU3/Z0F2aDd3bTNMTnA5/bndKMVR3PQ" alt="contacts">
+      <p>
+        If you would like me to contact you please provide your name and email
+        in the box below.
+      </p>
+      <img
+        src="https://imgs.search.brave.com/hXaO0UMoPTXa3IZVxIaknMQTgAygVRxOo3BvttsAHRY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvNjg1/NjE4OTgwL3Bob3Rv/L2NvbnRhY3RzLmpw/Zz9zPTYxMng2MTIm/dz0wJms9MjAmYz1Y/dE94a2hHbEZEeTNC/dFZWUl9HYVdTRXU3/Z0F2aDd3bTNMTnA5/bndKMVR3PQ"
+        alt="contacts"
+      />
     </section>
-</body>
- <footer><div id="blackBar"></div></footer>
+    <section id="input">
+      <input type="text" id="name" placeholder="E.g., Jane Doe" required />
+      <input
+        type="text"
+        id="email"
+        placeholder="E.g., janedoe@email.com"
+        required
+      />
+      <button type="submit">Submit</button>
+    </section>
+  </body>
+  <footer><div id="blackBar"></div></footer>
 </html>
